Fixing another typo

--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -582,7 +582,7 @@ bottom quark fusion. The tree-level Feynman diagram for this process is shown in
 \subfloat[b-associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-b.pdf}}
 \end{center}
 \caption[Tree-level Feynman diagrams of gluon fusion and b-associated production of neutral Higgs bosons in the MSSM]{Tree-level Feynman diagrams of (a) gluon fusion production and (b) b-associated
-production of neutral Higgs bosons in the MSSM. The squarks in the gluon fusion production loop do not contribute to production of the \PHiggsps boson.}
+production of neutral Higgs bosons in the MSSM. The squarks in the gluon fusion production loop do not contribute to the production of the \PHiggsps boson.}
 \label{fig:production_mssm}
 \end{figure}
 
